# trOS

./: Cargo.toml  README.md  build  build.zig  linker.ld  project.4coder  run
.cargo/: config
src/: boot.S  cmd.zig  errors.zig  framebuffer.rs  index.zig  io.zig  kernel.zig  main.rs  mbox.rs  mbox.zig  regs.zig  test.zig  types.zig  uart.rs  util.zig  vga.zig
src/io/: emmc.zig  gpio.zig  mbox.zig  mmio.zig  uart.zig
src/tests/: test.zig
src/types/: errors.zig  regs.zig
src/vga/: font.psf  framebuffer.zig
trOS_core/: .gitignore  Cargo.toml  README.md  run
trOS_core/.cargo/: config
trOS_core/src/: main.rs
trOS_io/: Cargo.toml
trOS_io/src/: framebuffer.rs  lib.rs  uart.rs
trOS_mbox/: Cargo.toml
trOS_mbox/src/: lib.rs  mbox.rs
trOS_phys/: Cargo.toml
trOS_phys/src/: gpio.rs  lib.rs  mmio.rs
trOS_reg/: Cargo.toml
