[package]
name = "trOS"
version = "0.1.0"
authors = ["Sam Hood <sjdh@sjdh.us>"]
edition = "2018"

# A far from small image for debug mode. Note that for testing on real hardware,
# you may want to enable debug symbols for release mode and switch the opt-level
# to 's' for the smallest size.
[profile.dev]
opt-level = 's'
debug = true

# Get the tiniest possible image for release mode by dropping debug symbols
# and using the 'z' optimisation level.
[profile.release]
opt-level = 'z'
lto = true
debug = false

[dependencies]
panic-abort = "*"
spin = "*"
trOS_mbox = { path = "../trOS_mbox" }
trOS_io = { path = "../trOS_io" }

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]

[package.metadata.cargo-xbuild]
sysroot_path = "./.xbuild_sysroot"
