[package]
name = "trOS_io"
version = "0.1.0"
authors = ["Sam Hood <sjdh@sjdh.us>"]
edition = "2018"

[profile.dev]
opt-level = 's'
debug = true

[profile.release]
opt-level = 'z'
lto = true
debug = false

[dependencies]
spin = "*"
trOS_mbox = { path = "../trOS_mbox" }
trOS_phys = { path = "../trOS_phys" }

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]